# vault-tar

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
src/vault/: vault.py
src/vault_tar/: __init__.py  core.py
tests/: test_security.py
