[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault"
version = "0.1.0"
dependencies = [
    "cryptography"
]
requires-python = ">=3.14"
authors = [
  {name = "Volodymyr Horshenin"}
]
description = ""
readme = "README.md"
license = "MIT"
license-files = [
    "LICEN[CS]E*",
    "src/vault/vendor/licenses/*.txt",
]
keywords = [
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: End Users/Desktop",
  "Topic :: Utilities",
  "Environment :: Console",

  "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/l1asis/vault.git"
Issues = "https://github.com/l1asis/vault/issues"

[project.scripts]
