[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-tar"
version = "0.1.1"
dependencies = [
    "cryptography>=43.0",
]
requires-python = ">=3.12"
authors = [
  {name = "Volodymyr Horshenin"}
]
description = "AES-256-GCM file and directory encryption with chunked streaming and optional splitting."
readme = "README.md"
license = "MIT"
license-files = [
    "LICEN[CS]E*",
]
keywords = [
    "encryption", "aes", "aes-256-gcm", "cryptography", "file-encryption",
    "directory-encryption", "pbkdf2", "security", "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
all = ["vault-tar[test]"]

[project.urls]
Homepage = "https://github.com/l1asis/vault-tar"
Repository = "https://github.com/l1asis/vault-tar.git"
Issues = "https://github.com/l1asis/vault-tar/issues"

[project.scripts]
vtar = "vault_tar.core:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
